Sticky Nav Jumping Issue Solved

--- a/assets/scss/components/_cp-main-menu.scss
+++ b/assets/scss/components/_cp-main-menu.scss
@@ -107,8 +107,8 @@
 }
 
 
-header {
-    .navigation-wrapper {
-        margin-top: $cx-heading-margin-bottom;
-    }
-}
+// header {
+//     .navigation-wrapper {
+//         margin-top: $cx-heading-margin-bottom;
+//     }
+// }
